feat: Adds pages for messages